WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180431
[Win] Scrollbars are sometimes not rendered in accelerated compositing mode.
https://bugs.webkit.org/show_bug.cgi?id=180431
Summary
[Win] Scrollbars are sometimes not rendered in accelerated compositing mode.
Per Arne Vollan
Reported
2017-12-05 10:07:07 PST
Resizing the window will bring them back again.
Attachments
Patch
(4.57 KB, patch)
2017-12-05 10:23 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(2.69 MB, application/zip)
2017-12-05 11:32 PST
,
EWS Watchlist
no flags
Details
Patch
(4.59 KB, patch)
2017-12-05 11:35 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(4.66 KB, patch)
2017-12-05 11:45 PST
,
Per Arne Vollan
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-12-05 10:20:32 PST
<
rdar://problem/34531264
>
Per Arne Vollan
Comment 2
2017-12-05 10:23:39 PST
Created
attachment 328464
[details]
Patch
Brent Fulgham
Comment 3
2017-12-05 10:36:27 PST
Comment on
attachment 328464
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328464&action=review
I think this looks good, but I would like to hear from Alan or Simon on the early return int he RenderLayerCompositer code. It sure sounds reasonable, but I don't know that code very well.
> Source/WebCore/rendering/RenderLayerCompositor.cpp:2884 > + return true;
Let's double-check this with Alan or Simon.
> Source/WebKitLegacy/win/WebView.h:573 > + void paintContents(const WebCore::GraphicsLayer*, WebCore::GraphicsContext&, WebCore::GraphicsLayerPaintingPhase, const WebCore::FloatRect& inClip, WebCore::GraphicsLayerPaintBehavior) override;
So this happened because the GraphicsLayerClient Api changed and we didn't notice?
EWS Watchlist
Comment 4
2017-12-05 11:32:53 PST
Comment on
attachment 328464
[details]
Patch
Attachment 328464
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5503183
New failing tests: tiled-drawing/scrolling/frames/fixed-inside-frame.html compositing/iframes/connect-compositing-iframe.html compositing/iframes/overlapped-iframe.html compositing/visible-rect/iframe-with-layers-outside-viewport.html compositing/iframes/scrolling-iframe.html compositing/iframes/become-overlapped-iframe.html compositing/visible-rect/iframe-and-layers.html compositing/iframes/composited-parent-iframe.html compositing/iframes/invisible-nested-iframe-show.html compositing/iframes/connect-compositing-iframe-delayed.html compositing/iframes/page-cache-layer-tree.html compositing/iframes/resizer.html compositing/iframes/connect-compositing-iframe2.html compositing/iframes/iframe-resize.html compositing/iframes/connect-compositing-iframe3.html compositing/iframes/enter-compositing-iframe.html
EWS Watchlist
Comment 5
2017-12-05 11:32:54 PST
Created
attachment 328476
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Per Arne Vollan
Comment 6
2017-12-05 11:35:50 PST
Created
attachment 328477
[details]
Patch
Per Arne Vollan
Comment 7
2017-12-05 11:36:42 PST
(In reply to Brent Fulgham from
comment #3
)
> Comment on
attachment 328464
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=328464&action=review
> > I think this looks good, but I would like to hear from Alan or Simon on the > early return int he RenderLayerCompositer code. It sure sounds reasonable, > but I don't know that code very well. > > > Source/WebCore/rendering/RenderLayerCompositor.cpp:2884 > > + return true; > > Let's double-check this with Alan or Simon. > > > Source/WebKitLegacy/win/WebView.h:573 > > + void paintContents(const WebCore::GraphicsLayer*, WebCore::GraphicsContext&, WebCore::GraphicsLayerPaintingPhase, const WebCore::FloatRect& inClip, WebCore::GraphicsLayerPaintBehavior) override; > > So this happened because the GraphicsLayerClient Api changed and we didn't > notice?
No, this was a drive-by fix, and not actually needed. Thanks for reviewing!
Simon Fraser (smfr)
Comment 8
2017-12-05 11:39:44 PST
Comment on
attachment 328477
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328477&action=review
> Source/WebKitLegacy/win/ChangeLog:9 > + Make sure virtual methods are actually overridden by adding the 'override' keyword.
What you're really saying here is "fix the signatures of GraphicsLayerClient that should have been overridden, and use 'override' to make sure this doesn't break in future.
Per Arne Vollan
Comment 9
2017-12-05 11:42:53 PST
(In reply to Simon Fraser (smfr) from
comment #8
)
> Comment on
attachment 328477
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=328477&action=review
> > > Source/WebKitLegacy/win/ChangeLog:9 > > + Make sure virtual methods are actually overridden by adding the 'override' keyword. > > What you're really saying here is "fix the signatures of GraphicsLayerClient > that should have been overridden, and use 'override' to make sure this > doesn't break in future.
Thanks Simon! I'll update the patch :)
Per Arne Vollan
Comment 10
2017-12-05 11:45:15 PST
Created
attachment 328478
[details]
Patch
Simon Fraser (smfr)
Comment 11
2017-12-05 11:54:03 PST
Comment on
attachment 328478
[details]
Patch Why is this not testable?
Per Arne Vollan
Comment 12
2017-12-05 11:58:11 PST
(In reply to Simon Fraser (smfr) from
comment #11
)
> Comment on
attachment 328478
[details]
> Patch > > Why is this not testable?
This should not be very hard to create a test case for, but I believe it is already covered.
Per Arne Vollan
Comment 13
2017-12-05 13:37:35 PST
Committed
r225535
: <
https://trac.webkit.org/changeset/225535/webkit
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug