[Win] Scrollbars are sometimes not rendered in accelerated compositing mode. https://bugs.webkit.org/show_bug.cgi?id=180431 <rdar://problem/34531264>

Reviewed by Simon Fraser.

Source/WebCore:

No new tests, covered by existing tests.

When a scroll layer is required, we will create an overflow control hosts layer.
In this case the method RenderLayerCompositor::shouldCompositeOverflowControls()
should return true, otherwise the scrollbars will not be rendered.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::shouldCompositeOverflowControls const):

Source/WebKitLegacy/win:

Fix the signatures of GraphicsLayerClient that should have been overridden, and use
'override' to make sure this doesn't break in the future.

* WebView.cpp:
(WebView::notifyAnimationStarted):
(WebView::paintContents):
* WebView.h:



Canonical link: https://commits.webkit.org/196371@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225535 268f45cc-cd09-0410-ab3c-d52691b4dbfc